<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">



        <ImageView
            android:id="@+id/mealImage"
            android:layout_width="260dp"
            android:layout_height="220dp"
            android:background="#2d2d2d"
            android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/mealTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:hint="@string/Food"/>

        <TextView
            android:id="@+id/mealDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/Description"/>


        <TextView
            android:id="@+id/mealIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/Ingredients"/>

        <TextView
            android:id="@+id/mealCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/Calories"/>


        <TextView
            android:id="@+id/mealLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:clickable="true"
            android:autoLink="all"
            android:hint="@string/Link"
            android:focusable="true" />

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>